--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,10 +18,14 @@ android {
     }
     defaultConfig {
         applicationId "com.warper"
-        minSdkVersion 14
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+    }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
     buildTypes {
         release {
